--- a/views/notes_de_frais.twig
+++ b/views/notes_de_frais.twig
@@ -1,15 +1,15 @@
   {% extends 'layout.twig' %}
   
- {% block mainTitle %}Congés{% endblock %}
- {% block minorTitle %}Mes congés en détail  {% endblock %}
+ {% block mainTitle %}Note de frais{% endblock %}
+ {% block minorTitle %}Mois de {{mois}} {% endblock %}
 
  {% block content %}
       <table id="datatable-buttons" class="table table-striped table-bordered">
           <thead>
             <tr>
-              <th>Motif</th>
-              <th>Date de début</th>
-              <th>Date de fin</th>
+              <th>Mission</th>
+              <th>catégorie frais</th>
+              <th>Justificatif</th>
               <th>Statut</th>
               <th></th>
               <th>operation</th>
@@ -29,4 +29,3 @@
      </table> 
 
 {% endblock %}
-
