--- a/views/demandeNFrais.html
+++ b/views/demandeNFrais.html
@@ -1,8 +1,60 @@
- {% extends 'layout.twig' %}
- {% block mainTitle %}Demande de note de frais{% endblock %}
- {% block minorTitle %}  {% endblock %}
- {% block content%}
-   
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+ 
+
+    <!-- Bootstrap -->
+    <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="../vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <!-- NProgress -->
+
+    <link href="../vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
+
+    <link href="../vendors/dropzone/dist/min/dropzone.min.css" rel="stylesheet">
+
+    <link href="../vendors/switchery/dist/switchery.min.css" rel="stylesheet">
+
+    <link href="../vendors/select2/dist/css/select2.min.css" rel="stylesheet">
+    
+    
+    <!-- Custom Theme Style -->
+    <link href="../build/css/custom.min.css" rel="stylesheet">
+  </head>
+
+
+
+        <!-- page content -->
+          <div class="">
+            <div class="page-title">
+              <div class="title_left">
+                <h3>Demande de Note de Frais </h3>
+              </div>
+
+
+              <div class="title_right">
+                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                  <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search for...">
+                    <span class="input-group-btn">
+                              <button class="btn btn-default" type="button">Go!</button>
+                          </span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="clearfix"></div>
+
+            <div class="row">
+              <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="x_panel">
+                  <div class="x_title">
+                    
+                   
+                    <div class="clearfix"></div>
+                  </div>
+                  <div class="x_content">
+
                     <form class="form-horizontal form-label-left" novalidate>
 
                       
@@ -88,6 +140,34 @@
 
 
                         </div>
+
+
+                    
+
+
+
+
+
+
+          
+
+
+
+
+
+
+                    
+                
+                      
+
+
+                 
+               
+
+
+
+
+
                       <div class="ln_solid"></div>
                       <div class="form-group">
                         <div class="col-md-6 col-md-offset-3">
@@ -96,5 +176,37 @@
                         </div>
                       </div>
                     </form>
- {% endblock %}
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        
+        <!-- /page content -->
 
+       
+
+    <!-- jQuery -->
+    <script src="../vendors/jquery/dist/jquery.min.js"></script>
+    <!-- Bootstrap -->
+    <script src="../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- FastClick -->
+    <script src="../vendors/fastclick/lib/fastclick.js"></script>
+    <!-- validator -->
+    <script src="../vendors/validator/validator.js"></script>
+    <!-- bootstrap-daterangepicker -->
+    <script src="../vendors/moment/min/moment.min.js"></script>
+
+    <script src="../vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
+
+    <script src="../vendors/dropzone/dist/min/dropzone.min.js"></script>
+
+    <script src="../vendors/switchery/dist/switchery.min.js"></script>
+
+
+    <!-- Custom Theme Scripts -->
+    <script src="../build/js/custom.min.js"></script>
+
+	
+  </body>
+</html>
